# flight_journal

./: Cargo.toml  README.md  flight_database.drawio  test.igc  test1.igc
script/: main.py
src/: flight_list.js  flight_manager.rs  flight_track.rs  index.html  logbook.rs  main.js  main.rs  profile.js  styles.css  tree.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: flight_track.rs  logbook.rs  main.rs
src-tauri/src/flight_track/: igc_reader.rs
src-tauri/src/logbook/: flight_table.rs  site_table.rs  tag_table.rs  wing_table.rs
src/flight_manager/: flight_data.rs
src/flight_manager/flight_data/: flight_simplify.rs  igc_reader.rs  trace_manager.rs
src/logbook/: flight_table.rs  tag_table.rs
