[package]
name = "flight_journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["cargo"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
geoutils = "0.5.1"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde_json = "1.0"
anyhow = "1.0"